--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <title>Please Participate in Our Survey!</title>
   <link href="https://fonts.googleapis.com/css?family=Oswald:300,700|Varela+Round" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+
+  <!--This for the Logo-->
+  <link rel="shortcut icon" type="x-icon" href="https://i.ibb.co/qJS3Zfd/image0.jpg">
 </head>
 <body>
 
